Fixed typo, thx to bj0ern for mentioning

--- a/mediatomb/doc/readme.lyx
+++ b/mediatomb/doc/readme.lyx
@@ -4858,7 +4858,7 @@ status open
 \end_layout
 
 \begin_layout Code
-<image-quality>8<image-quality>
+<image-quality>8</image-quality>
 \end_layout
 
 \begin_layout Standard
